force-app/main/default/objects/Sylabus__c/Sylabus__c.object-meta.xml
<CustomObject>
    <label>Sylabus</label>
    <nameField>
        <label>Sylabus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sylabus</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>