force-app/main/default/objects/Sylabus__c/fields/Curso__c.field-meta.xml
<CustomField>
    <fullName>Curso__c</fullName>
    <label>Curso</label>
    <referenceTo>Curso__c</referenceTo>
    <relationshipLabel>Sylabus</relationshipLabel>
    <relationshipName>Sylabus</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>