force-app/main/default/objects/Sylabus__c/fields/Horas__c.field-meta.xml
<CustomField>
    <fullName>Horas__c</fullName>
    <label>Horas</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>