force-app/main/default/objects/Sylabus__c/fields/Laboratorio__c.field-meta.xml
<CustomField>
    <fullName>Laboratorio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Laboratorio</label>
    <type>Checkbox</type>
</CustomField>