force-app/main/default/objects/Sylabus__c/fields/Tema__c.field-meta.xml
<CustomField>
    <fullName>Tema__c</fullName>
    <label>Tema</label>
    <type>TextArea</type>
</CustomField>