force-app/main/default/objects/Sylabus__c/recordTypes/Curso.recordType-meta.xml
<RecordType>
    <fullName>Curso</fullName>
    <active>true</active>
    <label>Curso</label>
</RecordType>