force-app/main/default/objects/Sylabus__c/recordTypes/Sylabus.recordType-meta.xml
<RecordType>
    <fullName>Sylabus</fullName>
    <active>true</active>
    <label>Sylabus</label>
</RecordType>